--- a/index.html
+++ b/index.html
@@ -5,39 +5,44 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<div class="tab">
-  <button class="tablink" onclick="openPage('Landing', this, 'red')">Landing Page</button>
-  <button class="tablink" onclick="openPage('Technical', this, 'red')">Technical Portfolio</button>
-  <button class="tablink" onclick="openPage('Qualifications', this, 'red')">Qualifications</button>
-  <button class="tablink" onclick="openPage('Service', this, 'red')">Service</button>
-  <button class="tablink" onclick="openPage('AI', this, 'red')">AI-Generated Page</button>
+<div id = "header">
+  <div class = "container">
+    <nav>
+      <ul = "sidemenu">
+        <li>
+          <a href="index.html">Landing Page</a>
+        </li>
+        <li>
+          <a href="tech.html">Technical Portfolio</a>
+        </li>
+        <li>
+          <a href="qualifications.html">Qualifications</a>
+        </li>
+        <li>
+          <a href="service.html">Service</a>
+        </li>
+        <li>
+          <a href="AI.html">AI Generated Page</a>
+        </li>
+        <i class="fas fa-times" onclick="closemenu()"></i>
+      </ul>
+      <i class="fas fa-bars" onclick="openmenu()"></i>
+    </nav>
+  </div>
 </div>
 
-<div id="Landing" class="tabcontent">
-  <body bgcolor = "black">
-  <table width="100%" border="0" cellspacing="0" cellpadding="0">
-    <tr>
-      <td align="center"><h3><font color="blue">HOWDY!!</font></h3></td>
-    </tr>
-    <tr>
-      <td align="center"><p style="color :chartreuse"><br><br>Hello World!</p></td>
-    </tr>
-  </table>
-  </body>
-</div>
+<body bgcolor = "black">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td align="center"><h3><font color="blue">HOWDY!!</font></h3></td>
+  </tr>
+  <tr>
+    <td align="center"><p style="color :chartreuse"><br><br>Hello World!</p></td>
+  </tr>
+</table>
+</body>
 
-<div id="Technical" class="tabcontent">
-  <body bgcolor = "red">
-  <table width="100%" border="0" cellspacing="0" cellpadding="0">
-    <tr>
-      <td align="center"><h3><font color="#99000">TECHNICAL PORTFOLIO</font></h3></td>
-    </tr>
-    <tr>
-      <td align="center"><p style="color :chartreuse"><br><br>Coming Soon!</p></td>
-    </tr>
-  </table>
-  </body>
-</div>
+
 
 
 </html>
