Finsihed Landing page

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
 <body bgcolor = "black">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td align="center"><h3><font color="blue">HOWDY!!</font></h3></td>
-  </tr>
-  <tr>
-    <td align="center"><p style="color :chartreuse"><br><br>Hello World!</p></td>
+    <h1 align = "center"> </h1>
+    <p align = "left">
+      <font color = "white" size="+2">
+          Hello and welcome to my page! My name is Shahir Ali! I am a current Senior at Texas A&M University <br> 
+        who is majoring in Computer Science, with a minor in Cybersecurity. I have 1 internship under my belt, <br>
+        and will have a second by the time I graduate. I encourage you to look around the website and find what's <br> 
+        interesting to you!
+      </font>
+    </p>
+    <img src="placeholder.jpeg" alt="Placeholder Image" width = "400" height = "500" align = "right">
   </tr>
 </table>
 </body>
-
-
 
 
 </html>
