--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <body bgcolor = "black">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <h1 align = "center"> </h1>
+    <font color = "white" size="+2">
+      <h1 align = "center"> Landing Page </h1>
+    </font>
     <p align = "left">
       <font color = "white" size="+2">
           Hello and welcome to my page! My name is Shahir Ali! I am a current Senior at Texas A&M University <br> 
