--- a/qualifications.html
+++ b/qualifications.html
@@ -62,7 +62,9 @@
             Currently I am interested in cybersecurity and data science. My data science class has been fun so far <br>
             and I have been interested in cybersecurity ever since I found out what it entails.<br>
             I am also currently learnign web development which is interesting and I would like to <br>
-            explore it even after the class is done.
+            explore it even after the class is done. Finally at my internship I learned about <br>
+            satellite communications, and I can see myself pursuing this career further as it was <br>
+            super fun and exciting! <br>
         </font>  
     </p>
     <figure align = "right">
