finsihed service and AI page

--- a/tech.html
+++ b/tech.html
@@ -81,6 +81,7 @@
                         generation of the images, however I still consider myself not very familiar with <br>
                         the technology. It was a really fun project, and I would like to explore it again <br>
                         in the future, though it is not high on my priority list. <br>
+                        Github Link (placeholder need to update): <a href="google.com">Click Here!</a>
                     </p>    
                 </figcaption>
             </font>
