added no CCS page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li>
           <a href="AI.html">AI Generated Page</a>
         </li>
+        <li>
+          <a href="indexNoCSS.html">No CSS Landing Page</a>
+        </li>
         <i class="fas fa-times" onclick="closemenu()"></i>
       </ul>
       <i class="fas fa-bars" onclick="openmenu()"></i>
