Finished AI page completely for iteration 2

--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
-<head>
-<title>TEST</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <!-- ensures proper rendering and touch zooming for all devices  -->
+        <meta name ="viewport" content="width=device-width, initial-scale=1">
+        <link id="mainStyleSheet" rel="stylesheet" href="style1.css" />
+
+        <title>LAB 3 About Us page</title>
+    </head>
 
 <div id = "header">
   <div class = "container">
     <nav>
-      <ul = "sidemenu">
-        <li>
+      <tr = "center">
+        <th>
           <a href="index.html">Landing Page</a>
-        </li>
-        <li>
+        </th>
+        <th>
           <a href="tech.html">Technical Portfolio</a>
-        </li>
-        <li>
+        </th>
+        <th>
           <a href="qualifications.html">Qualifications</a>
-        </li>
-        <li>
+        </th>
+        <th>
           <a href="service.html">Service</a>
-        </li>
-        <li>
+        </th>
+        <th>
           <a href="AI.html">AI Generated Page</a>
-        </li>
-        <li>
+        </th>
+        <th>
           <a href="indexNoCSS.html">No CSS Landing Page</a>
-        </li>
+        </th>
         <i class="fas fa-times" onclick="closemenu()"></i>
-      </ul>
+      </tr>
       <i class="fas fa-bars" onclick="openmenu()"></i>
     </nav>
   </div>
 </div>
 
-<body bgcolor = "black">
+<body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <font color = "white" size="+2">
+    <font size="+2">
       <h1 align = "center"> Landing Page </h1>
     </font>
     <p align = "left">
-      <font color = "white" size="+2">
+      <font size="+2">
           Hello and welcome to my page! My name is Shahir Ali! I am a current Senior at Texas A&M University <br> 
         who is majoring in Computer Science, with a minor in Cybersecurity. I have 1 internship under my belt, <br>
         and will have a second by the time I graduate. I encourage you to look around the website and find what's <br> 
