--- a/qualifications.html
+++ b/qualifications.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <!-- ensures proper rendering and touch zooming for all devices  -->
+        <meta name ="viewport" content="width=device-width, initial-scale=1">
+        <link id="mainStyleSheet" rel="stylesheet" href="style1.css" />
+
+        <title>LAB 3 About Us page</title>
+    </head>
+    
 <div id = "header">
     <div class = "container">
       <nav>
@@ -24,17 +36,17 @@
     </div>
   </div>
 
-<body bgcolor = "black">
+<body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <font color = "white" size="+2">
+    <font size="+2">
       <h1 align = "center"> Qualifications </h1>
     </font>
     <p align = "left">
-      <font color = "white" size="+2">
+      <font size="+2">
         <h2> Technical Skills</h2>
       </font>
-      <font color = "white">
+      <font>
         Languages: <br>
             &ensp; C++ (Most comfortable)  <br>
             &ensp; Python (proficient)  <br>
@@ -54,11 +66,11 @@
             &ensp; AWS <br>    
       </font>
     </p>
-    <font color = "white" size="+2">
+    <font size="+2">
         <h2 align = "center"> Technical Interests </h2>
     </font>
     <p align = "center">
-        <font color="white">
+        <font>
             Currently I am interested in cybersecurity and data science. My data science class has been fun so far <br>
             and I have been interested in cybersecurity ever since I found out what it entails.<br>
             I am also currently learnign web development which is interesting and I would like to <br>
@@ -69,7 +81,7 @@
     </p>
     <figure align = "right">
         <img src="Resume SS.png" alt="Placeholder Image" width = "400" height = "500">
-        <font color = "white" size="+2">
+        <font size="+2">
             <figcaption>
                 <p>
                     Resume download: <a href="Shahir-Ali-Resume-Jan-2023.pdf" download>Resume</a>
