--- a/AI.html
+++ b/AI.html
@@ -1,75 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Growth of Data Science</title>
+    <style>
+        /* Reset some default styles */
+        body, h1, p {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Basic styling for the entire page */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* Header styling */
+        header {
+            background-color: #007acc;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+
+        /* Main content area styling */
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Prompt styling */
+        .prompt {
+            background-color: #007acc;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+
+        /* Footer styling */
+        footer {
+            background-color: #007acc;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
+
 <div id = "header">
-    <div class = "container">
-      <nav>
-        <ul = "sidemenu">
-          <li>
-            <a href="index.html">Landing Page</a>
-          </li>
-          <li>
-            <a href="tech.html">Technical Portfolio</a>
-          </li>
-          <li>
-            <a href="qualifications.html">Qualifications</a>
-          </li>
-          <li>
-            <a href="service.html">Service</a>
-          </li>
-          <li>
-            <a href="AI.html">AI Generated Page</a>
-          </li>
-          <i class="fas fa-times" onclick="closemenu()"></i>
-        </ul>
-        <i class="fas fa-bars" onclick="openmenu()"></i>
-      </nav>
-    </div>
+  <div class = "container">
+    <nav>
+      <tr = "center">
+        <th>
+          <a href="index.html">Landing Page</a>
+        </th>
+        <th>
+          <a href="tech.html">Technical Portfolio</a>
+        </th>
+        <th>
+          <a href="qualifications.html">Qualifications</a>
+        </th>
+        <th>
+          <a href="service.html">Service</a>
+        </th>
+        <th>
+          <a href="AI.html">AI Generated Page</a>
+        </th>
+        <i class="fas fa-times" onclick="closemenu()"></i>
+      </tr>
+      <i class="fas fa-bars" onclick="openmenu()"></i>
+    </nav>
   </div>
+</div>
 
-  <body bgcolor = "black">
-    <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <font color = "white" size="+2">
-            <h1 align = "center">AI Generated topic (I have not figured out what I want yet)</h1>
-          </font>
-        
-          <font color = "white" size="+2">
-            <h2 align = "left">Point 1</h2>
-          </font>
-            <font color = "white">
-                    <p align = "left">
-                    "The sun dipped below the horizon, casting a warm, orange glow across the tranquil lake. <br>
-                    The gentle ripples on the water mirrored the soft whispers of a breeze rustling through the <br>
-                    leaves of the nearby trees. As evening descended, the world seemed to slow down, and a sense of <br>
-                    peace settled over the landscape, inviting contemplation and reflection." <br>
-                    Text randomly generated with ChatGPT (placeholder need to update): <a href="google.com">Click Here!</a>
-                    </p>   
-            </font> 
+</head>
+<body>
+    <header>
+        <h1>The Growth of Data Science</h1>
+        <p>Exploring the Evolution of a Dynamic Field</p>
+    </header>
+    <div class="container">
+        <h2>Overview</h2>
+        <p>Data science has experienced remarkable growth over the years. From its inception as a specialized field to becoming an integral part of decision-making in various industries, data science has evolved significantly.</p>
 
-        <font color = "white" size="+2">
-            <h2 align = "center">Point 2</h2>
-        </font>
-        <font color = "white">
-            <p align = "center">
-                "The old bookstore had an air of mystery about it, with shelves that seemed to stretch into infinity, <br>
-                each one packed with books of every genre and era. The scent of aged paper and leather-bound volumes <br>
-                hung in the air, a testament to the countless stories and knowledge contained within those walls. Sunlight <br>
-                streamed through dusty windows, casting long, enchanting shadows that danced among the literary treasures, <br>
-                inviting readers to embark on new adventures and discover hidden worlds." <br>
-                Text randomly generated with ChatGPT (placeholder need to update): <a href="google.com">Click Here!</a>
-            </p>   
-        </font> 
+        <h2>Milestones</h2>
+        <p>Key milestones in data science include the rise of Big Data, the development of sophisticated machine learning algorithms, and the democratization of data-driven insights. These milestones have reshaped industries and opened up new possibilities.</p>
 
-        <font color = "white" size="+2">
-            <h2 align = "right">Point 3</h2>
-        </font>
-        <font color = "white">
-            <p align = "right">
-                I occassionaly go to blood drives sponsored by different organizations around the school, <br>
-                this is because I have had family members who needed blood transfusions, and thus know <br>
-                how hard it is to get blood sometimes. Therefore I try to help as much as I can, because luckily <br>
-                I am in good health and can afford to. <br>
-            </p>   
-    </font> 
-
-        </tr>
-      </table>
-  </body>
+        <h2>Future Trends</h2>
+        <p>The future of data science holds exciting prospects, with trends such as artificial intelligence, ethical data use, and automation set to drive innovation. Data science will continue to play a pivotal role in shaping the world's future.</p>
+    </div>
+    <div class="prompt">
+        <p>Prompt: Make a simple HTML/CSS website about the growth of data science that includes this prompt <br>
+           ChatGPT link: <a href="https://chat.openai.com">Click Here!</a>
+        </p>
+    </div>
+    <footer>
+        <p>&copy; 2023 The Growth of Data Science</p>
+    </footer>
+</body>
+</html>
