--- a/tech.html
+++ b/tech.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <!-- ensures proper rendering and touch zooming for all devices  -->
+        <meta name ="viewport" content="width=device-width, initial-scale=1">
+        <link id="mainStyleSheet" rel="stylesheet" href="style1.css" />
+
+        <title>LAB 3 About Us page</title>
+    </head>
+    
 <div id = "header">
     <div class = "container">
       <nav>
@@ -24,7 +36,7 @@
     </div>
   </div>
 
-  <body bgcolor = "black">
+  <body>
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
           <font color = "white" size="+2">
