Added all images and proper links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         interesting to you!
       </font>
     </p>
-    <img src="placeholder.jpeg" alt="Placeholder Image" width = "400" height = "500" align = "right">
+    <img src="MyPicture.jpg" alt="Placeholder Image" width = "400" height = "500" align = "right">
   </tr>
 </table>
 </body>
