--- a/qualifications.html
+++ b/qualifications.html
@@ -9,32 +9,32 @@
 
         <title>LAB 3 About Us page</title>
     </head>
-    
+
 <div id = "header">
-    <div class = "container">
-      <nav>
-        <ul = "sidemenu">
-          <li>
-            <a href="index.html">Landing Page</a>
-          </li>
-          <li>
-            <a href="tech.html">Technical Portfolio</a>
-          </li>
-          <li>
-            <a href="qualifications.html">Qualifications</a>
-          </li>
-          <li>
-            <a href="service.html">Service</a>
-          </li>
-          <li>
-            <a href="AI.html">AI Generated Page</a>
-          </li>
-          <i class="fas fa-times" onclick="closemenu()"></i>
-        </ul>
-        <i class="fas fa-bars" onclick="openmenu()"></i>
-      </nav>
-    </div>
+  <div class = "container">
+    <nav>
+      <tr = "center">
+        <th>
+          <a href="index.html">Landing Page</a>
+        </th>
+        <th>
+          <a href="tech.html">Technical Portfolio</a>
+        </th>
+        <th>
+          <a href="qualifications.html">Qualifications</a>
+        </th>
+        <th>
+          <a href="service.html">Service</a>
+        </th>
+        <th>
+          <a href="AI.html">AI Generated Page</a>
+        </th>
+        <i class="fas fa-times" onclick="closemenu()"></i>
+      </tr>
+      <i class="fas fa-bars" onclick="openmenu()"></i>
+    </nav>
   </div>
+</div>
 
 <body>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
