--- a/service.html
+++ b/service.html
@@ -9,32 +9,32 @@
 
         <title>LAB 3 About Us page</title>
     </head>
-    
+
 <div id = "header">
-    <div class = "container">
-      <nav>
-        <ul = "sidemenu">
-          <li>
-            <a href="index.html">Landing Page</a>
-          </li>
-          <li>
-            <a href="tech.html">Technical Portfolio</a>
-          </li>
-          <li>
-            <a href="qualifications.html">Qualifications</a>
-          </li>
-          <li>
-            <a href="service.html">Service</a>
-          </li>
-          <li>
-            <a href="AI.html">AI Generated Page</a>
-          </li>
-          <i class="fas fa-times" onclick="closemenu()"></i>
-        </ul>
-        <i class="fas fa-bars" onclick="openmenu()"></i>
-      </nav>
-    </div>
+  <div class = "container">
+    <nav>
+      <tr = "center">
+        <th>
+          <a href="index.html">Landing Page</a>
+        </th>
+        <th>
+          <a href="tech.html">Technical Portfolio</a>
+        </th>
+        <th>
+          <a href="qualifications.html">Qualifications</a>
+        </th>
+        <th>
+          <a href="service.html">Service</a>
+        </th>
+        <th>
+          <a href="AI.html">AI Generated Page</a>
+        </th>
+        <i class="fas fa-times" onclick="closemenu()"></i>
+      </tr>
+      <i class="fas fa-bars" onclick="openmenu()"></i>
+    </nav>
   </div>
+</div>
 
   <body>
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -47,14 +47,15 @@
             <h2 align = "left"> Blood Donation</h2>
           </font>
           <figure align = "left">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="blooddonation.jpeg" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
-                        I occassionaly go to blood drives sponsored by different organizations around the school, <br>
+                        I occassionaly go to blood drives sponsored by different organizations and/or centers,<br>
                         this is because I have had family members who needed blood transfusions, and thus know <br>
                         how hard it is to get blood sometimes. Therefore I try to help as much as I can, because luckily <br>
                         I am in good health and can afford to. <br>
+                        Here is a link to a center finder: <a href="https://www.grifolsplasma.com/en/-/collegestation-tx">Click Here!</a>
                     </p>    
                 </figcaption>
             </font>
@@ -64,14 +65,14 @@
             <h2 align = "center">Big Event</h2>
         </font>
         <figure align = "center">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="bigevent.jpeg" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
                         Big Event is a tradition around campus where students help to clean up not only campus, <br>
                         but the surrounding areas as well. Different organizatiosn can take different responsibilities <br>
                         and it is super awesome to see everyone in the school coming together for a great cause. <br>
-                        If you are affiliated with Texas A&M check out this link: (placeholder need to update): <a href="google.com">Click Here!</a>
+                        If you are affiliated with Texas A&M check out this link: (placeholder need to update): <a href="https://bigevent.tamu.edu">Click Here!</a>
                     </p>    
                 </figcaption>
             </font>
@@ -81,14 +82,15 @@
             <h2 align = "right"> Swap Shop</h2>
         </font>
         <figure align = "right">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="swapshop.jpeg" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
                         Swap shop is a really cool opportunity for Texas A&M students to recycle old things, <br>
                         that they do not use anymore, and exchange them for other items that students did not want. <br>
                         My role in this was to not only help set up event, but help bring people from the community <br>
-                        to the event. If you are affiliated with Texas A&M check out this link: (placeholder need to update): <a href="google.com">Click Here!</a>
+                        to the event. <br>
+                        If you are affiliated with Texas A&M check out this link: (placeholder need to update): <a href="https://www.instagram.com/aggieecoreps/?hl=en">Click Here!</a>
                     </p>    
                 </figcaption>
             </font>
