--- a/tech.html
+++ b/tech.html
@@ -9,36 +9,36 @@
 
         <title>LAB 3 About Us page</title>
     </head>
-    
-<div id = "header">
-    <div class = "container">
-      <nav>
-        <ul = "sidemenu">
-          <li>
-            <a href="index.html">Landing Page</a>
-          </li>
-          <li>
-            <a href="tech.html">Technical Portfolio</a>
-          </li>
-          <li>
-            <a href="qualifications.html">Qualifications</a>
-          </li>
-          <li>
-            <a href="service.html">Service</a>
-          </li>
-          <li>
-            <a href="AI.html">AI Generated Page</a>
-          </li>
-          <i class="fas fa-times" onclick="closemenu()"></i>
-        </ul>
-        <i class="fas fa-bars" onclick="openmenu()"></i>
-      </nav>
+
+    <div id = "header">
+      <div class = "container">
+        <nav>
+          <tr = "center">
+            <th>
+              <a href="index.html">Landing Page</a>
+            </th>
+            <th>
+              <a href="tech.html">Technical Portfolio</a>
+            </th>
+            <th>
+              <a href="qualifications.html">Qualifications</a>
+            </th>
+            <th>
+              <a href="service.html">Service</a>
+            </th>
+            <th>
+              <a href="AI.html">AI Generated Page</a>
+            </th>
+            <i class="fas fa-times" onclick="closemenu()"></i>
+          </tr>
+          <i class="fas fa-bars" onclick="openmenu()"></i>
+        </nav>
+      </div>
     </div>
-  </div>
 
   <body>
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
+      
           <font color = "white" size="+2">
             <h1 align = "center"> Technical Portfolio</h1>
           </font>
@@ -47,7 +47,7 @@
             <h2 align = "left"> Vending Machine</h2>
           </font>
           <figure align = "left">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="vendingmachine.png" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
@@ -65,7 +65,7 @@
             <h2 align = "center"> Internship project</h2>
         </font>
         <figure align = "center">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="satellite.png" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
@@ -83,7 +83,7 @@
             <h2 align = "right"> Rasterization</h2>
         </font>
         <figure align = "right">
-            <img src="Unknown.png" alt="Placeholder Image" width = "400" height = "500">
+            <img src="rasterizer.png" alt="Placeholder Image" width = "400" height = "500">
             <font color = "white">
                 <figcaption>
                     <p>
@@ -99,6 +99,6 @@
             </font>
         </figure>
 
-        </tr>
+  
       </table>
   </body>
